# client-server-webrtc-example

client/: example-client.html  example-client.js
server/: CMakeLists.txt  conanfile.py
server/src/: main.cpp  observers.h
server/src/client/: CMakeLists.txt  main.cpp
